examples/bench/bad/typing/eqref.mlw

parameter x : int ref

let p = x = 0
